--- a/canvas.html
+++ b/canvas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>canvas</title>
+    <title>canvas 画板</title>
 </head>
 <style>
     *, body, html {
@@ -14,9 +14,15 @@
     }
     #canvas {
         display: block;
+        border: 1px dashed black;
+    }
+    #title {
+        margin: 10px 0 10px 20px;
+        font-size: 16px;
     }
 </style>
 <body>
+    <div id="title"> 可以开始写写画画了 </div>
     <canvas id="canvas" width="100" height="100">
     </canvas>
 </body>
@@ -34,8 +40,8 @@
     let canvas = document.getElementById("canvas")
     let ctx = canvas.getContext("2d")
 
-    canvas.width = document.documentElement.clientWidth
-    canvas.height = document.documentElement.clientHeight
+    canvas.width = document.documentElement.clientWidth - 2
+    canvas.height = document.documentElement.clientHeight - 48
 
     let flag = false
     let lastPoint = []
