避免微信浏览器页面滑动

--- a/canvas.html
+++ b/canvas.html
@@ -7,10 +7,12 @@
     <title>canvas 画板</title>
 </head>
 <style>
-    *, body, html {
+    * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
+    }
+    body {
         overflow: hidden;
     }
     #canvas {
